--- a/zh/0.md
+++ b/zh/0.md
@@ -20,4 +20,6 @@ Smpe暂不提供自定义路由的功能, 采用严格一致的路由匹配. 如
 
 已经了解了目录结构, 下面通过一个简单的实例来进一步了解Smpe的功能. 
 
-[[下一节](1.md)] [第一个基于Smpe的应用程序](1.md)
+[<<Smpe开发者文档](README.md)
+[[目录](README.md)]
+[第一个Smpe应用程序>>](1.md)
