--- a/zh/1.md
+++ b/zh/1.md
@@ -1,8 +1,8 @@
 ##### 第一个Smpe应用程序
 
-需求: 开发一个简单的员工档案管理功能. 能够新增,修改,删除,查看员工档案, 数据保存到MySQL数据库中.
+需求: 开发一个简单的员工档案查看功能. 数据保存到MySQL数据库中.
 
-帮助文档包括下列属性:
+员工档案包括下列属性:
 
   * 标识
   * 姓名
@@ -13,13 +13,15 @@
   * 职位
   * 所属部门
 
-首先, 根据上边的要求创建名为hr的MySQL数据库:
+根据Smpe的 *模块第一* 原则, 这里给模块起名为 *Hr* (注意Hr的第一个字母大写).
+
+首先, 根据上边的需求创建名为 *Hr* 的MySQL数据库:
 
 ```sql
 CREATE DATABASE `hr` CHARACTER SET utf8 COLLATE utf8_general_ci;
 ```
 
-创建员工档案管表(起名为employee):
+创建员工档案管表(起名为employee, 注意employee的首字母是小写的, 这是为了兼容MySQL大小写的问题):
 
 ```sql
 CREATE TABLE `employee` (
@@ -37,18 +39,123 @@ CREATE TABLE `employee` (
 
 创建好数据库后, 接下来创建标准的Smpe项目目录结构.
 
-将当前目录切换到Nginx或者Apache的Public目录:
+将当前目录切换到Apache httpd或者Nginx的Public目录(这里假设您已足够熟悉Apache httpd或者Nginx):
 
 ```bash
-cd /path/to/public
+cd /path/to/nginx/or/apache/public
 ```
 
-创建所需要的标准目录, 直接克隆starter项目即可:
+创建所需要的标准目录. 手工创建标准的Smpe目录是一件繁琐的事情, 可以通过直接克隆starter库实现快速创建基础目录:
 
 ```bash
-git clone https://github.com/smpe/starter.git pepress
+git clone https://github.com/smpe/starter.git Hr
 ```
 
-这样就完成了初始化一个空的项目目录结构.
+这样就完成了初始化一个空的项目目录结构. 然后分别在block,controller,library,view目录下创建Hr子目录(注意Hr的第一个字母大写).
 
-然后分别在block,controller,library,view目录下创建Hr子目录(注意Hr的第一个字母大写).
+> 特别说明: block是Smpe特有的目录, 用于存储一些视图中包含的公共代码块.
+
+到此, 我们建好了标准的Smpe项目结构和Hr模块的目录结构. 下面实现员工档案查看功能.
+
+修改配置文件(文件路径为Config.php):
+
+```php
+class Config extends Smpe_Config
+{
+	/**
+	 * @var array 模块清单
+	 */
+	public static $modules = array(
+		'Hr' => array('dsn'=>'Hr', 'listen'=>''),
+	);
+
+	/**
+	 * @var array 数据连接
+	 */
+	public static $dsn = array(
+		'Hr' => array('type'=>'Mysql', 'server'=>'localhost', 'port'=>3306, 'user'=>'root', 'password'=>'', 'database'=>'Hr'),
+	);
+
+	/**
+	 * @var string 默认模块
+	 */
+	public static $defaultModule = 'Hr';
+}
+
+```
+
+创建Model类(文件路径为library/Hr/Employee.php):
+
+```php
+class Hr_Employee extends Smpe_Model
+{
+    /**
+     * @var Smpe_DbInterface Smpe_DbInterface对象
+     */
+    protected static $data = null;
+
+    /**
+     * @var string 模块名称
+     */
+    protected static $module = 'Hr';
+
+    /**
+     * @var string 表名称
+     */
+    protected static $table  = 'employee';
+
+    /**
+     * @var string 主键名称
+     */
+    protected static $primary = 'EmployeeID';
+}
+```
+
+创建控制器(文件路径为controller/Hr/EmployeeController.php):
+
+```php
+class Hr_EmployeeController extends Smpe_Action
+{
+    /**
+     * 员工档案详情
+     * @param int $helpID
+     * @return array
+     */
+    public function Detail($employeeID = 0) {
+		// 将数据赋值到$this->data['Employee'], 供视图中调用
+        $this->data['Employee'] = Hr_Employee::data()->row(array('EmployeeID'=>$employeeID));
+		
+		// 页面标题
+        $this->response['Title'] = 'View employee detail';
+		
+		// 调用布局(布局中再调用视图)
+        $this->layout();
+    }
+}
+```
+
+创建视图(文件路径为view/Hr/EmployeeDetail.php):
+
+```php
+<ul>
+  <li>标识: <?php echo $this->data['Employee']['Employee']?></li>
+  <li>姓名: <?php echo $this->data['Employee']['FullName']?></li>
+  <li>性别: <?php echo $this->data['Employee']['Gender']?></li>
+  <li>年龄: <?php echo $this->data['Employee']['Age']?></li>
+  <li>建档日期: <?php echo $this->data['Employee']['CreationTime']?></li>
+  <li>入职日期: <?php echo $this->data['Employee']['EntryDate']?></li>
+  <li>职位: <?php echo $this->data['Employee']['Title']?></li>
+  <li>所属部门: <?php echo $this->data['Employee']['Department']?></li>
+</ul>
+```
+
+完成上边的文件和代码的录入后, 打开浏览器输入准确的访问地址:
+
+```bash
+http://localhost/Hr/public/?p=/Hr/Employee/Detail/1
+```
+到这里就完成了一个简单的员工档案查看功能.
+
+[<<Smpe概述](0.md)
+[[目录](README.md)]
+[API>>](2.md)
