--- a/zh/1.md
+++ b/zh/1.md
@@ -37,7 +37,14 @@ CREATE TABLE `employee` (
 ) ENGINE=InnoDB AUTO_INCREMENT=1000000 DEFAULT CHARSET=utf8 COMMENT='员工档案';
 ```
 
-创建好数据库后, 接下来创建标准的Smpe项目目录结构.
+新增一行数据:
+
+```sql
+INSERT INTO `employee` (`EmployeeID`, `FullName`, `Gender`, `Age`, `CreationTime`, `EntryDate`, `Title`, `Department`)
+VALUES (1, '任我乔', 'male', 18, '2015-1-19 13:09:51', '2015-1-19', '大侠', '大唐镖局');
+```
+
+创建标准的Smpe目录结构.
 
 将当前目录切换到Apache httpd或者Nginx的Public目录(这里假设您已足够熟悉Apache httpd或者Nginx):
 
@@ -45,13 +52,19 @@ CREATE TABLE `employee` (
 cd /path/to/nginx/or/apache/public
 ```
 
-创建所需要的标准目录. 手工创建标准的Smpe目录是一件繁琐的事情, 可以通过直接克隆starter库实现快速创建基础目录:
+创建所Smpe标准目录(目录命名为Hr). 手工创建这些目录是一件繁琐的事情, 可以通过克隆starter库实现快速创建:
 
 ```bash
 git clone https://github.com/smpe/starter.git Hr
 ```
 
-这样就完成了初始化一个空的项目目录结构. 然后分别在block,controller,library,view目录下创建Hr子目录(注意Hr的第一个字母大写).
+这样就完成了初始化一个空的Smpe目录结构, 将当前目录切换到刚刚创建的目录中:
+
+```bash
+cd Hr
+```
+
+下面文档中的文件路径均基于此目录.
 
 > 特别说明: block是Smpe特有的目录, 用于存储一些视图中包含的公共代码块.
 
