--- a/zh/0.md
+++ b/zh/0.md
@@ -27,6 +27,8 @@ Smpe暂不提供自定义路由的功能, 采用严格一致的路由匹配. 如
   * 99%的SQL由ORM构建
   * 模块第一
 
+> 更多关于这些约束的介绍, 请参考[SMVC](https://github.com/liudng/webook/blob/master/generic/3.md).
+
 已经了解了目录结构, 下面通过一个简单的实例来进一步了解Smpe的功能. 
 
 [<<Smpe开发者文档](README.md)
