--- a/zh/1.md
+++ b/zh/1.md
@@ -52,10 +52,11 @@ VALUES (1, '任我乔', 'male', 18, '2015-1-19 13:09:51', '2015-1-19', '大侠',
 cd /path/to/nginx/or/apache/public
 ```
 
-创建所Smpe标准目录(目录命名为Hr). 手工创建这些目录是一件繁琐的事情, 可以通过克隆starter库实现快速创建:
+创建所Smpe标准目录(目录命名为Hr). 手工创建这些目录是一件繁琐的事情, 可以通过克隆starter和Smpe库实现快速创建:
 
 ```bash
 git clone https://github.com/smpe/starter.git Hr
+git clone https://github.com/smpe/Smpe.git Hr/library/Smpe
 ```
 
 这样就完成了初始化一个空的Smpe目录结构, 将当前目录切换到刚刚创建的目录中:
@@ -168,6 +169,8 @@ class Hr_EmployeeController extends Smpe_Action
 http://localhost/Hr/public/?p=/Hr/Employee/Detail/1
 ```
 到这里就完成了一个简单的员工档案查看功能.
+
+> [pepress](https://github.com/smpe/pepress)是一个完整的Smpe演示项目. 阅读pepress源码有助您进一步了解Smpe.
 
 [<<Smpe概述](0.md)
 [[目录](README.md)]
