--- a/zh/0.md
+++ b/zh/0.md
@@ -1,4 +1,4 @@
-##### Smpe概述
+# Smpe概述
 
 Smpe是参照MVC模式设计的简单高性能PHP应用程序框架. 解决中大型项目混乱的开发和维护过程. 参考了Drupal,CI,Zend Framework的优点, 结合实际项目开发过程设计的简单高性能应用框架.
 
