--- a/zh/0.md
+++ b/zh/0.md
@@ -58,7 +58,7 @@ http://localhost/Support/Help/Detail/1
 
 > 更多关于这些约束的介绍, 请参考[SMVC](https://github.com/liudng/webook/blob/master/generic/3.md).
 
-已经了解了目录结构, 下面通过一个简单的实例来进一步了解Smpe的功能. 
+已经了解了项目目录结构, 下面通过一个简单的实例来进一步了解Smpe的功能.
 
 ## 阅读导航
 
