--- a/zh/1.md
+++ b/zh/1.md
@@ -167,6 +167,8 @@ http://localhost/Hr/public/?p=/Hr/Employee/Detail/1
 
 > [pepress](https://github.com/smpe/pepress)是一个完整的Smpe演示项目. 阅读pepress源码有助您进一步了解Smpe.
 
+## 阅读导航
+
 [<<Smpe概述](0.md)
 [[目录](README.md)]
 [API>>](2.md)
