--- a/zh/2.md
+++ b/zh/2.md
@@ -1,6 +1,43 @@
 # API
 
-待完善
+Smpe常用函数参考.
+
+## Smpe_Url类
+
+URL相关方法.
+
+### Smpe_Url::http($module[, $controller[, $action[, $arguments[, $query[, $anchor]]]]])
+
+构建统一的URL地址. 
+
+当Config::$isRewrite = false时, 生成格式: 
+```
+http://localhost/?p=/module/controller/action/arg1/arg2.
+```
+当Config::$isRewrite = true时, 生成格式: 
+```
+http://localhost/module/controller/action/arg1/arg2. 
+```
+
+* $module 模块
+* $controller 控制器
+* $action 方法
+* $arguments... 参数
+
+示例:
+
+```php
+echo Smpe_Url::http('Support', 'Help', 'Detail', array('110'), array('pi' => '2'), 'comments');
+```
+当Config::$isRewrite = false时, 输出:
+```
+http://localhost/?p=/Support/Help/Detail/110&pi=2#comments
+```
+当Config::$isRewrite = true时, 输出:
+```
+http://localhost/Support/Help/Detail/110?pi=2#comments
+```
+
 
 ## 阅读导航
 
