--- a/zh/4.md
+++ b/zh/4.md
@@ -1,6 +1,62 @@
-# 命名规范
+# 编码规范
 
-待完善
+本文档提供代码格式和文档指南供参与Smpe开发的个人和团队使用。
+
+## 命名约定
+
+### 类
+
+类名只允许有字母数字字符，在大部分情况下不鼓励使用数字。下划线只允许做路径分隔符；例如 Smpe/Application.php 文件里对应的类名称是 Smpe_Application。
+
+如果类名包含多个单词，每个单词的第一个字母必须大写，连续的大写是不允许的，例如 “Smpe_DB” 是不允许的，而 "Smpe_Db" 是可接受的。
+
+### 文件名
+
+包含任何 PHP 代码的任何文件应当以 ".php" 扩展名结尾。下面这些例子给出 Smpe 类可接受的文件名：
+
+```sh
+Smpe/Application.php
+Smpe/DbInterface.php
+Smpe/I18in/zh.php
+```
+文件名必须遵循上述的对应类名的规则。
+
+### 函数和方法
+
+函数名只包含字母数字字符，下划线是不允许的。数字是允许的但大多数情况下不鼓励。
+
+函数名总是以小写开头，当函数名包含多个单词，每个子的首字母必须大写，这就是所谓的 “驼峰” 格式。
+
+我们一般鼓励使用冗长的名字，函数名应当长到足以说明函数的意图和行为。这些是可接受的函数名的例子：
+
+```sh
+filterInput()
+getElementById()
+widgetFactory()
+```
+允许全局函数但大多数情况下不鼓励，建议把这类函数封装到静态类里。
+
+### 变量
+
+变量只包含数字字母字符，大多数情况下不鼓励使用数字，下划线不接受。
+
+同函数名一样，变量名总以小写字母开头并遵循“驼峰式”命名约定。
+
+我们一般鼓励使用冗长的名字，这样容易理解代码，开发者知道把数据存到哪里。除非在小循环里，不鼓励使用简洁的名字如 "$i" 和 "$n" 。如果一个循环超过 20 行代码，索引的变量名必须有个具有描述意义的名字。
+
+### 常量
+
+常量包含数字字母字符和下划线，数字允许作为常量名。
+
+常量名的所有字母必须大写。
+
+常量中的单词必须以下划线分隔，例如可以这样 EMBED_SUPPRESS_EMBED_EXCEPTION 但不许这样 EMBED_SUPPRESSEMBEDEXCEPTION。
+
+常量必须通过 "const" 定义为类的成员，强烈不鼓励使用 "define" 定义的全局常量。
+
+## 编码风格
+
+Smpe的编码风格请参考[PEAR coding standards](http://pear.php.net/manual/en/standards.php)
 
 ## 阅读导航
 
